# tmp

./: .gitignore  CMakeLists.txt  MTTensor.cpp  MTTensor.h  build_plot_data.cpp  driver.cpp  edi2bin.cpp  forwardModeling.cpp  generate_replica.cpp  global.h  j2bin.cpp  main.cpp  mt1danis_generate_model.cpp  notes.txt  objects.h  pf.cpp  sampler.cpp  sampler_init.h  sampler_options.h  some_tests.cpp
Boost_tests/: CMakeLists.txt  model_tests.cpp
docs/: jformat.txt
edi_parser/: CMakeLists.txt  JParser.cpp  JParser.h  JTokenizer.cpp  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
input_folder/: README  cg_model_1.txt  cg_model_2.txt  test_env.sh
